--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
-        <title>Exemple HTML et CSS</title>
+        <title>Timo's website</title>
     </head>
     <body>
         <button class="btn" id="btn1">Premier bouton</button><br>
