--- a/index.html
+++ b/index.html
@@ -2,12 +2,33 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="CSS/style.css">
         <title>Timo's website</title>
     </head>
     <body>
-        <button class="btn" id="btn1">Premier bouton</button><br>
-        <button class="btn" id="btn2">Deuxième bouton</button><br>
-        <button class="btn" id="btn3">Troisième bouton</button>
+    
+<h1>Personal website of Timothé ALEZRAA</h1>
+<nav>
+  <div class="conteneur-nav">
+  <label for="mobile">Afficher / Cacher le menu</label>
+  <input type="checkbox" id="mobile" role="button">
+    <ul>
+      <li class="deroulant"><a href="#">Physics &ensp;</a>
+        <ul class="sous">
+          <li><a href="CV-Latex_ALEZRAA.pdf">Short CV</a></li>
+          <li><a href="#">Internship 2020</a></li>
+          <li><a href="#">Internship 2021</a></li>
+          <li><a href="#">Internship 2022</a></li>
+        </ul>
+      </li>
+      <li class="deroulant"><a href="#">Politics &ensp;</a>
+        <ul class="sous">
+          <li><a href="#"> Just kidding, but still macron démission </a></li>
+        </ul>
+       </li>
+      </ul>     
+    I am a physicist look
+             
     </body>
 </html>
+
