--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <ul>
       <li class="deroulant"><a href="#">Physics &ensp;</a>
         <ul class="sous">
-          <li><a href="CV-Latex_ALEZRAA.pdf">Short CV</a></li>
-          <li><a href="#">Internship 2020</a></li>
-          <li><a href="#">Internship 2021</a></li>
-          <li><a href="#">Internship 2022</a></li>
+          <li><a href="media/CV-Latex_ALEZRAA.pdf">Short CV</a></li>
+          <li><a href="media/sn1a_lpnhe.pdf">Internship 2020</a></li>
+          <li><a href="media/BEcondensation_report.pdf">Internship 2021</a></li>
+          <li><a href="media/NS2023_pres.pdf">Internship 2022</a></li>
+          <li><a href="others.html">Other little projects</a></li>
         </ul>
       </li>
       <li class="deroulant"><a href="#">Politics &ensp;</a>
