--- a/others.html
+++ b/others.html
@@ -13,6 +13,6 @@
     <ul>
     <li> During M1, I (and a classmate of mine) did a little internship with M. Pawel Pieranski about dislocations and nucleations in liquid crystals. <a href = "media/liquidcrystal_report.pdf">Here</a> is a report of it in french. </li>
     <li> During M2, I (and a classmate of mine)did a little internship with M.Silvio Franz about random ising models. <a href = "media/randomising_lptms.pdf">Here</a> is a report of it in english. </li>
-    <li> During M2, I (and a classmate of mine) did an experimental project with objective of measuring the muon's lifetime using Cherenkov radiation in a water tank. <a href = "media/TL2223_NPAC.pdf">Here</a> is a report of it in english. </li>
+    <li> During M2, I (and a classmate of mine) did an experimental project with objective of measuring the muon's lifetime using Cherenkov radiation in a water tank (actually a prototype of a tank of the STEREO experiment to detect sterile neutrinos). <a href = "media/TL2223_NPAC.pdf">Here</a> is a report of it in english. </li>
     </ul>
    
