--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <li class="deroulant"><a href="#">Physics &ensp;</a>
         <ul class="sous">
           <li><a href="media/CV-Latex_ALEZRAA.pdf">Short CV</a></li>
-          <li><a href="media/sn1a_lpnhe.pdf">Internship 2020</a></li>
-          <li><a href="media/BEcondensation_report.pdf">Internship 2021</a></li>
-          <li><a href="media/NS2023_pres.pdf">Internship 2022</a></li>
+          <li><a href="media/sn1a_lpnhe.pdf">Internship 2020 - SNIa model at LPNHE, Paris</a></li>
+          <li><a href="media/BEcondensation_report.pdf">Internship 2021 - Quantum gas theory at ITP, TU Berlin</a></li>
+          <li><a href="media/NS2023_pres.pdf">Internship 2022 - Neutron Star EoS at LUTH, Observatoier de paris</a></li>
           <li><a href="others.html">Other little projects</a></li>
         </ul>
       </li>
@@ -28,7 +28,7 @@
         </ul>
        </li>
       </ul>     
-    Website in construction
+    Website in construction -- You can contact me at timothealezraa[at]ens-paris-saclay.fr
              
     </body>
 </html>
