--- a/others.html
+++ b/others.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="CSS/style.css">
+        <link rel="stylesheet" href="CSS/style_others.css">
         <title>little projects</title>
     </head>
     <body>
