--- a/others.html
+++ b/others.html
@@ -7,7 +7,7 @@
     </head>
     <body>
     
-    <a href="index.html">Back to homepage</a> <br>
+    <a href="index.html">Back to homepage</a> <br><br><br><br>
     
     Here are some other little projects done during my education: 
     <ul>
