add meta info to index

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="CSS/style.css">
         <title>Timo's website</title>
+        <meta name ="description" content="Personal website of Timothé ALEZRAA">
+        <meta name="author" content="ALEZRAA"
     </head>
     <body>
     
@@ -22,12 +24,7 @@
           <li><a href="others.html">Other little projects</a></li>
         </ul>
       </li>
-      <li class="deroulant"><a href="#">Politics &ensp;</a>
-        <ul class="sous">
-          <li><a href="#"> Just kidding, but still macron démission </a></li>
-        </ul>
-       </li>
-      </ul>     
+    </ul>     
     Website in construction -- You can contact me at timothealezraa[at]ens-paris-saclay.fr
              
     </body>
